<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Daily 10 minute tasks</string>

    <!-- Task Editor -->
    <string name="task_editor_activity_title_add">Add a new task</string>
    <string name="task_editor_activity_title_edit">Edit task</string>

    <string name="new_task_hint_title">Short description</string>
    <string name="new_task_descr_title">Detailed description</string>

    <string name="priority_label">Priority</string>
    <string name="priority_label_low">low</string>
    <string name="priority_label_normal">normal</string>
    <string name="priority_label_high">high</string>

    <string name="button_task_add">add task</string>
    <string name="button_task_conclude">mark as done</string>
    <string name="button_task_restore">mark as not done</string>

    <string name="insert_task_success">Added new task!</string>
    <string name="validate_task_error_title">Write something to do</string>
    <string name="validate_task_error_description">Something is wrong with this description.</string>

    <string name="update_task_success">Updated task!</string>

    <string name="task_editor_menu_save">Save changes</string>
    <string name="task_editor_menu_edit">Edit task</string>
    <string name="task_editor_menu_move_to_todo">Move to to-do list</string>
    <!-- Main activity -->
    <string name="main_activity_empty_task_list">Let\'s add some tasks!</string>
    <string name="menu_history_label">@string/history_activity_title</string>
    <string name="menu_settings_label">@string/settings_activity_title</string>

    <string name="content_description_add_task_label">Add a new task</string>
    <string name="content_description_toolbar">toolbar</string>
    <string name="main_activity_task_marked_as_done">Completed the task</string>

    <string name="tools_main_activity_title_text">Todo: something</string>
    <string name="tools_main_activity_description_text">Very descriptive to-do</string>

    <string name="main_activity_task_of_the_day">Today\'s task</string>
    <string name="main_activity_task_of_the_day_after">Tomorrow\'s task</string>
    <!-- Task details -->
    <string name="task_details_activity_title">Task details</string>
    <string name="tools_task_details_title_text">Todo: something</string>
    <string name="tools_task_details_concluded_text">01/01/19000</string>

    <string name="content_description_edit_task_label">Edit task</string>
    <string name="content_description_check_task">mark task as done</string>

    <string name="task_details_delete_task_prompt">Delete this task. Are you sure?</string>
    <string name="task_details_delete_task_positive">Yes</string>
    <string name="task_details_delete_task_negative">No</string>

    <string name="task_details_delete_task_success">Task deleted</string>
    <string name="task_details_task_marked_as_done">@string/main_activity_task_marked_as_done</string>
    <string name="task_details_task_unmarked_as_done">Moved task back to to-do list</string>

    <string name="task_details_modified_date_text">Finished: <xliff:g>%1$s</xliff:g></string>

    <string name="task_details_priority_label">@string/priority_label</string>

    <!-- History -->
    <string name="history_activity_title">History</string>

    <string name="tools_history_viewholder_title">@string/tools_task_details_title_text</string>
    <string name="tools_history_viewholder_modified_date">01/01/1999</string>

    <string name="content_description_checked_task">task already concluded</string>
    <!-- Settings -->
    <string name="empty_string"></string>

    <string name="settings_activity_title">Settings</string>
    <string translatable="false" name="pref_daily_notification_key">daily-notification</string>
    <string name="pref_daily_notification_summaryOff">Disabled</string>
    <string name="pref_daily_notification_summaryOn">Enabled</string>
    <string name="pref_daily_notification_title">Daily notification</string>

    <string translatable="false" name="pref_time_picker_minutes_key">time-picker-minutes</string>
    <string name="pref_time_picker_title">Time to show notifications</string>
    <string name="settings_activity_time_picker_24hour_summary"><xliff:g>%1$d</xliff:g>:<xliff:g>%2$02d</xliff:g></string>
    <string name="settings_activity_time_picker_12hour_summary"><xliff:g>%1$d</xliff:g>:<xliff:g>%2$02d</xliff:g> <xliff:g>%3$s</xliff:g></string>
    <string name="settings_activity_time_picker_am">am</string>
    <string name="settings_activity_time_picker_pm">pm</string>

    <string translatable="false" name="pref_location_service_key">location-service</string>
    <string name="pref_location_service_summaryOff">Disabled</string>
    <string name="pref_location_service_summaryOn">Enabled</string>
    <string name="pref_location_service_title">Notify based on location</string>

    <string translatable="false" name="pref_location_open_and_set_place_key">location-service-place</string>
    <string name="pref_location_open_and_set_place_summaryOff">first, enable notifications based on location</string>
    <string name="pref_location_open_and_set_place_title">Show notification when close to</string>

    <string name="content_description_google_logo">powered by google</string>
    <!-- Notification -->
    <string name="main_notification_channel_name">Primary</string>
    <string name="notification_todays_task">Today\'s task</string>
    <string name="notification_mark_task_as_done_action">mark task as done</string>
    <string name="notification_dismiss_action">dismiss</string>

    <string translatable="false" name="pref_latest_task_completed_timestamp_key">pref-latest-task-completed-timestamp</string>

    <!-- Location -->

    <string translatable="false" name="pref_picked_place_id_key">pref-picked-place-id</string>
    <string name="pref_picked_place_id_default_value">ChIJI6rdYPi5j4ARPRVRyDdc598</string>

    <string translatable="false" name="pref_picked_place_address_key">pref-picked-place-address</string>
    <string name="pref_picked_place_address_default_value">1600 Amphitheatre Parkway in Mountain View, California, United States</string>

    <string name="privacy">http://www.google.com/policies/privacy</string>

    <!-- Widget -->
    <string name="widget_empty_task_list">no tasks for today</string>
    <string name="widget_todays_task">Today\'s task</string>
    <string name="widget_tomorrows_task">Tomorrow\'s task</string>
</resources>
