<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="@bool/pref_daily_notification_default_value"
        android:key="@string/pref_daily_notification_key"
        android:summaryOff="@string/pref_daily_notification_summaryOff"
        android:summaryOn="@string/pref_daily_notification_summaryOn"
        android:title="@string/pref_daily_notification_title" />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_location_service_default_value"
        android:key="@string/pref_location_service_key"
        android:summaryOff="@string/pref_location_service_summaryOff"
        android:summaryOn="@string/pref_location_service_summaryOn"
        android:title="@string/pref_location_service_title" />
</PreferenceScreen>