<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/TaskTheme.CardView"
    android:layout_marginBottom="@dimen/constraint_layout_vertical_padding">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_main_first_activity_height"
        android:id="@+id/constraint_layout"
        style="@style/TaskTheme.ConstraintLayout" >

        <TextView
            android:id="@+id/task_of_the_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_task_of_the_day"
            android:textSize="@dimen/text_size_smaller"
            android:layout_marginStart="@dimen/activity_main_view_vertical_margin"
            android:layout_marginBottom="@dimen/activity_main_view_vertical_margin"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/tools_main_activity_title_text"
            android:textSize="@dimen/text_size_large"
            android:textColor="@android:color/black"
            android:maxLines="@integer/cardview_textview_first_task_maxlines"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/activity_main_view_title_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/task_of_the_day"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/tools_main_activity_description_text"
            android:textSize="@dimen/text_size_medium"
            android:maxLines="@integer/cardview_description_textview_maxlines"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_mark"
        android:layout_width="@dimen/activity_main_fab_size"
        android:layout_height="@dimen/activity_main_fab_size"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|start"
        app:layout_anchorGravity="bottom|start"
        app:layout_anchor="@id/constraint_layout"
        app:elevation="@dimen/activity_main_fab_elevation"
        app:srcCompat="@drawable/ic_task_check"
        android:tint="@android:color/white"
        android:scaleType="center"
        android:contentDescription="@string/content_description_check_task" />
</android.support.v7.widget.CardView>