<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoji.dailytask.ui.TaskDetailActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_task_editor_layout_padding"
        android:paddingStart="@dimen/activity_task_editor_layout_padding"
        android:paddingEnd="@dimen/activity_task_editor_layout_padding"
        android:paddingTop="@dimen/activity_task_editor_layout_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        tools:context="com.example.shoji.dailytask.ui.TaskEditorActivity">

        <EditText
            android:id="@+id/task_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_hint_title"
            android:inputType="text"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/task_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_descr_title"
            android:inputType="text"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_title_edit_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_label"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/view_vertical_margin"
            android:layout_marginBottom="@dimen/view_vertical_margin"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/primary_text_dark"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/activity_task_editor_buttonpadding"
            android:paddingEnd="@dimen/activity_task_editor_buttonpadding"
            tools:text="@string/button_task_add"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
